# cpp_lab06

./: CMakeLists.txt
include/: hash_checker.hpp
sources/: hash_checker.cpp  main.cpp
tests/: test.cpp
